<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="title">Electric Car</string>
    <string name="cars">Cars</string>
    <string name="favorites">Favourites</string>
    <string name="tesla">Tesla</string>
    <string name="price">Price</string>
    <string name="battery">Battery</string>
    <string name="potency">Potency</string>
    <string name="recharge">Recharge</string>
    <string name="calculate">Calculate</string>
</resources>