<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="24dp"
        android:elevation="24dp"
        app:cardBackgroundColor="@color/gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingBottom="16dp">



            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/tesla"
                android:contentDescription="@string/tesla"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/iv_image"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 300.000,00"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toTopOf="@id/tv_price"
                app:layout_constraintStart_toEndOf="@+id/tv_price"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/tv_battery"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/battery"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_price"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_battery_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="240 kw/h"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toTopOf="@id/tv_battery"
                app:layout_constraintStart_toEndOf="@+id/tv_battery"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/tv_potency"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/potency"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_battery"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_potency_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="600 cv"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toTopOf="@id/tv_potency"
                app:layout_constraintStart_toEndOf="@+id/tv_battery"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/tv_recharge"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/recharge"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_potency"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_recharge_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25 min"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toTopOf="@id/tv_recharge"
                app:layout_constraintStart_toEndOf="@+id/tv_battery"
                android:layout_marginStart="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>